# retrieval

./: api.py  embedding_faiss.py  pyproject.toml  requirements.txt  search.py
